# vala-lint

./: .editorconfig  .gitignore  .pre-commit-hooks.yaml  .travis.yml  .valalintignore  AUTHORS  CMakeLists.txt  Dockerfile  README.md  meson.build  meson_options.txt  vala-lint.conf  vala.yml
.github/workflows/: ci.yml  examples.yml  publish.yml  vala.yml
cmake/: FindVala.cmake  GObjectIntrospectionMacros.cmake  GSettings.cmake  Makefile  ParseArguments.cmake  README  README.Vala.rst  Tests.cmake  ValaPrecompile.cmake  ValaVersion.cmake
data/: meson.build  vala-linter-1.0.pc.in  vala-linter-1.pc.in  vlint-1.pc.in
debian/: changelog  control  copyright  rules
lib/: CMakeLists.txt  Check.vala  Config.vala  DisableResult.vala  Disabler.vala  FileData.vala  Fixer.vala  FormatMistake.vala  Linter.vala  ParseResult.vala  Parser.vala  Utils.vala  ValaReporter.vala  ValaVisitor.vala  meson.build  vala-lint-1.0.deps  vala-lint.pc.cmake  vlint-linter.vala
lib/Checks/: AlwaysUseBracesCheck.vala  BlockOpeningBraceNewlineAfterCheck.vala  BlockOpeningBraceSpaceBeforeCheck.vala  ConditionSingleLineCheck.vala  DoubleSemicolonCheck.vala  DoubleSpacesCheck.vala  EllipsisCheck.vala  FunctionCommaSpaceAfterCheck.vala  IndentationCheck.vala  InitializeObjectsWithPropertiesCheck.vala  LineLengthCheck.vala  MissingBracketsCheck.vala  NamingAllCapsCheck.vala  NamingCamelCaseCheck.vala  NamingConventionCheck.vala  NamingUnderscoreCheck.vala  NoSpaceCheck.vala  NoteCheck.vala  SpaceBeforeBracketCheck.vala  SpaceBeforeParenCheck.vala  TabCheck.vala  TrailingNewlinesCheck.vala  TrailingWhitespaceCheck.vala  UnnecessaryStringTemplateCheck.vala  UnusedStringTemplateCheck.vala  UsingDirectiveCheck.vala
po/: CMakeLists.txt  vala-lint.pot
src/: Application.vala  FileData.vala  meson.build
test/: AutoFixTest.vala  ChecksUnitTests.vala  ContentTest.vala  FileTest.vala  FilesTests.vala  ParserUnitTests.vala  UnitTest.vala  UtilsUnitTests.vala  checks.vala  config.vapi.in  meson.build
test/auto-fix/expected/: ellipsis-check.vala  trailing-whitespace-check.vala
test/auto-fix/initial/: double-semicolon-check.vala
test/files/: IconRenderer.vala  PantheonTerminalWindow.vala  TextRenderer.vala  block-opening-brace-space-before-check.vala  double-spaces-check.vala  ellipsis-check.vala  general-pass.vala  general-warnings.vala  initialize-objects-with-properties.vala  line-length-check.vala  naming-convention-check.vala  note-check.vala  pass.vala  space-before-paren-check.vala  tab-check.vala  trailing-newlines-check-1.vala  trailing-newlines-check-2.vala  trailing-newlines-check-3.vala  trailing-newlines-check-4.vala  trailing-whitespace-check.vala  warnings.vala
vala-lint/: Application.vala  CMakeLists.txt  config.vala  config.vala.cmake
